# llm-lab

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
notebooks/: 01_pytorch_basics.ipynb  02_tensor_ops.ipynb  03_autograd.ipynb  04_nn_module.ipynb  05_layers.ipynb  06_datasets.ipynb  07_transforms.ipynb  08_tokenization.ipynb  09_embedding.ipynb  10_load_qwen3_0.6B.ipynb  11_attention.ipynb
