[project]
name = "llm-lab"
version = "0.1.0"
requires-python = ">=3.14.0"
dependencies = [
  "ipywidgets>=8.1.8",
  "jupyter-lsp>=2.3.1",
  "jupyterlab>=4.6.1",
  "jupyterlab-lsp>=5.3.0",
  "torch>=2.11.0",
  "torchvision>=0.26.0",
  "transformers>=5.13.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.basedpyright]
# Sets up a highly capable diagnostic mode optimized for notebook workflows
typeCheckingMode = "standard"
# Limits deep automated diagnostic runs strictly to open notebook tabs
diagnosticMode = "openFilesOnly"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
]
